Set a min height on the qstate display to prevent the animation from jumping around.

--- a/quantumAnimation.css
+++ b/quantumAnimation.css
@@ -17,3 +17,7 @@
     fill: red;
 }
 
+
+#qstate {
+    min-height: 3em;
+}
